# 3D-computer-graphics

./: .gitmodules  README.md
src/: CMakeLists.txt
src/apps/3d-graphics-programming/: CMakeLists.txt
src/apps/3d-graphics-programming/src/: LoopStrategy.h  Textures.h
src/apps/3d-graphics-programming/src/math/: Faces.h  Matrix4x4.h  Triangle.h
src/apps/3d-graphics-programming/src/rendering/: Camera.h  ColorBuffer.h  Painter.h  Texture.h
src/apps/graphics-programming/: CMakeLists.txt
src/apps/graphics-programming/src/: Colors.h  LoopStrategy.h  Textures.h  main.cpp  utils.h
src/apps/graphics-programming/src/geometry/: Mesh.h
src/apps/graphics-programming/src/gui/: Controls.h
src/apps/graphics-programming/src/math/: Faces.h  Matrix4x4.h  Structs.h  Triangle.h  Vec.h
src/apps/graphics-programming/src/rendering/: Camera.h  ColorBuffer.h  Light.h  Painter.h  Projector.h  Texture.h  WavefrontLoader.h
